@@ -751,6 +751,40 @@ bool OIIO_API div (ImageBuf &dst, const ImageBuf &A, float B,
 
 
 /// For all pixels and channels of dst within region roi (defaulting to
+/// all the defined pixels of dst), set dst = A * B + C.  This is equivalent
+/// to the sequence { mul(tmp,A,B); add(dst,tmp,C); }, but is likely to be
+/// more efficient and not require a temporary ImageBuf.
+/// It is permitted for any of dst, A, B, or C to be the same image.
+///
+/// A is always an ImageBuf. B and C may either both be ImageBuf or both be
+/// arrays of floats (one per channel, for each channel of A),
+/// or both be a single float (same value for all channels).
+///
+/// If roi is not initialized, it will be set to the union of the pixel
+/// regions of A and B.  If dst is not initialized, it will be sized based
+/// on roi. If dst is initialized, it also must have the same number of
+/// channels as A.
+///
+/// The nthreads parameter specifies how many threads (potentially) may
+/// be used, but it's not a guarantee.  If nthreads == 0, it will use
+/// the global OIIO attribute "nthreads".  If nthreads == 1, it
+/// guarantees that it will not launch any new threads.
+///
+/// Return true on success, false on error (with an appropriate error
+/// message set in dst).
+bool OIIO_API mad (ImageBuf &dst, const ImageBuf &A, const ImageBuf &B,
+                   const ImageBuf &C, ROI roi=ROI::All(), int nthreads=0);
+bool OIIO_API mad (ImageBuf &dst, const ImageBuf &A, const float *B,
+                   const float *C, ROI roi=ROI::All(), int nthreads=0);
+bool OIIO_API mad (ImageBuf &dst, const ImageBuf &A, float B,
+                   float C, ROI roi=ROI::All(), int nthreads=0);
+inline bool OIIO_API mad (ImageBuf &dst, float A, const ImageBuf &B,
+                   float C, ROI roi=ROI::All(), int nthreads=0) {
+    return mad (dst, B, A, C, roi, nthreads);
+}
+
+
+/// For all pixels and channels of dst within region roi (defaulting to
 /// all the defined pixels of dst), set dst = A ^ b. (raise to power)
 /// B may be either a single float (for all channels), or a float* pointing
 /// to one value per channel of A.
