@@ -2555,6 +2555,36 @@ action_addc (int argc, const char *argv[])
 
 
 static int
+action_mad (int argc, const char *argv[])
+{
+    if (ot.postpone_callback (3, action_mad, argc, argv))
+        return 0;
+    Timer timer (ot.enable_function_timing);
+    string_view command = ot.express (argv[0]);
+
+    ImageRecRef C (ot.pop());
+    ImageRecRef B (ot.pop());
+    ImageRecRef A (ot.pop());
+    ot.read (A);
+    ot.read (B);
+    ot.read (C);
+    ImageRecRef R (new ImageRec ("mad", ot.allsubimages ? A->subimages() : 1));
+    ot.push (R);
+
+    for (int s = 0, subimages = R->subimages();  s < subimages;  ++s) {
+        bool ok = ImageBufAlgo::mad ((*R)(s), (*A)(s), (*B)(s), (*C)(s));
+        if (! ok)
+            ot.error (command, (*R)(s).geterror());
+        R->update_spec_from_imagebuf (s);
+    }
+
+    ot.function_times[command] += timer();
+    return 0;
+}
+
+
+
+static int
 action_powc (int argc, const char *argv[])
 {
     if (ot.postpone_callback (1, action_powc, argc, argv))
@@ -4552,6 +4582,7 @@ getargs (int argc, char *argv[])
                 "--cmul %s %@", action_mulc, NULL, "", // Deprecated synonym
                 "--div %@", action_div, NULL, "Divide first image by second image",
                 "--divc %s %@", action_divc, NULL, "Divide the image values by a scalar or per-channel constants (e.g.: 0.5 or 1,1.25,0.5)",
+                "--mad %@", action_mad, NULL, "Multiply two images, add a third",
                 "--abs %@", action_abs, NULL, "Take the absolute value of the image pixels",
                 "--absdiff %@", action_absdiff, NULL, "Absolute difference between two images",
                 "--absdiffc %s %@", action_absdiffc, NULL, "Absolute difference versus a scalar or per-channel constant (e.g.: 0.5 or 1,1.25,0.5)",
