@@ -41,7 +41,9 @@ for f in [ "black.tif", "filled.tif", "checker.tif",
            "transpose.tif",
            "cshift.tif", "cadd1.exr", "cadd2.exr", "add.exr", "sub.exr",
            "abs.exr", "absdiff.exr",
-           "cmul1.exr", "cmul2.exr", "cpow1.exr", "cpow2.exr",
+           "mul.exr", "cmul1.exr", "cmul2.exr",
+           "mad.exr",
+           "cpow1.exr", "cpow2.exr",
            "div.exr", "divc1.exr", "divc2.exr",
            "chsum.tif", "grid-clamped.tif",
            "rangecompress.tif", "rangeexpand.tif",
